k8s/apps/portfolio/overlays/azure/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
